# Twilio_Video_With_Rust

backend/: .env.dist  .gitignore  Cargo.toml
backend/src/: database.rs  helper.rs  main.rs  model.rs  twilio.rs
frontend/: package.json
frontend/src/: Api.js  App.jsx
frontend/src/components/: AddRoom.jsx  JoinRoom.jsx  ModalForm.jsx  Rooms.jsx
frontend/src/hooks/: useNotification.js
