[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.0.0"
dotenvy = "0.15"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.105"
axum = "0.6.20"
rand = "0.8.5"
md5 = "0.7.0"
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tower-http = { version = "0.4.4", features = ["cors"] }
